--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
 	<head>
 		<link rel='stylesheet' href='index.css'>
+		<script src='game_files/App.js'></script>
 	</head>
-	<body>
+	<body onload='initApp([3, 3, 3])'>
 		<div>
 			<h1>NEO-cube alpha</h1>
 		</div>
