added tile coloring functionality on load

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>NEO-cube alpha</h1>
+			<h1>NEO-cube</h1>
 		</div>
 		<div>
 			<canvas id='game-surface'> Browser does not support html5 </canvas>
