--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script type="module"'>
 		import { initApp } from '/game_files/App.js';
 		document.addEventListener('DOMContentLoaded', () => {
-		initApp([3, 3, 3]);
+		initApp(2, 4, 3);
 		});
 		</script>
 	</head>
@@ -14,7 +14,7 @@
 			<h1>NEO-cube</h1>
 		</div>
 		<div>
-			<canvas id='game-surface'> Browser does not support html5 </canvas>
+			<canvas id='game-surface' width='700' height='450'> Browser does not support html5 </canvas>
 		</div>
 	</body>
 <html>
