added instant drag and release rotations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>NEO-cube</h1>
+			<h1>cube</h1>
 		</div>
 		<div>
 			<canvas id='game-surface' width='700' height='450'> Browser does not support html5 </canvas>
