--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 	<head>
 		<link rel='stylesheet' href='index.css'>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
 		<script type="module"'>
 		import { initApp } from '/game_files/App.js';
 		document.addEventListener('DOMContentLoaded', () => {
