changed file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel='stylesheet' href='index.css'>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
 		<script type="module"'>
-		import { initApp } from 'game_files/App.js';
+		import { initApp } from './game_files/App.js';
 		document.addEventListener('DOMContentLoaded', () => {
 		initApp(2, 3, 4);
 		});
