--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel='stylesheet' href='index.css'>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"></script>
-		<script type="module"'>
+		<script type="module">
 		import { initApp } from './game_files/App.js';
 		document.addEventListener('DOMContentLoaded', () => {
 		initApp(2, 3, 4);
