--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<script type="module">
 		import { initApp } from './game_files/App.js';
 		document.addEventListener('DOMContentLoaded', () => {
-		initApp(2, 3, 4);
+		initApp(3, 3, 3);
 		});
 		</script>
 	</head>
 	<body>
 		<div>
-			<h1>cube</h1>
+			<h1>neocube</h1>
 		</div>
 		<div>
 			<canvas id='game-surface' width='700' height='450'> Browser does not support html5 </canvas>
