--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 		</script>
 	</head>
 	<body>
-		<div>
+		<div class='title'>
 			<h1>neocube</h1>
 		</div>
 		<div>
 			<canvas id='game-surface' width='700' height='450'> Browser does not support html5 </canvas>
+		</div>
+		<div>
+
 		</div>
 	</body>
 <html>
